# serializer version: 1
# name: test_climates[air_purifier][climate.air_purifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_purifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00000000000004D2-000000000000008F-MatterNodeDevice-5-MatterThermostat-513-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_climates[air_purifier][climate.air_purifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'friendly_name': 'Air Purifier',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_purifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climates[eve_thermo][climate.eve_thermo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 10.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.eve_thermo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000021-MatterNodeDevice-1-MatterThermostat-513-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_climates[eve_thermo][climate.eve_thermo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.0,
      'friendly_name': 'Eve Thermo',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 10.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 17.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.eve_thermo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climates[room_airconditioner][climate.room_airconditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 32.0,
      'min_temp': 16.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.room_airconditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000024-MatterNodeDevice-1-MatterThermostat-513-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_climates[room_airconditioner][climate.room_airconditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'friendly_name': 'Room AirConditioner',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 32.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.room_airconditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climates[thermostat][climate.longan_link_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.longan_link_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 387>,
    'translation_key': None,
    'unique_id': '00000000000004D2-0000000000000004-MatterNodeDevice-1-MatterThermostat-513-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_climates[thermostat][climate.longan_link_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 28.3,
      'friendly_name': 'Longan link HVAC',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 387>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.longan_link_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
